# coins_bevy

./: Cargo.toml  README.md  coins_bevy.d.ts  coins_bevy.js  coins_bevy_bg.wasm.d.ts  index.html
.github/workflows/: rust.yml
assets/scenes/: 01.scn.ron
src/: consts.rs  debug.rs  main.rs  states.rs  utils.rs
src/editor/: mod.rs
src/game/: components.rs  mod.rs
src/input/: mod.rs
src/states/: menu.rs  mod.rs
