[package]
name = "coins_bevy"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 'z'
panic = 'abort'
lto = true

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
console_error_panic_hook = "0.1"
bevy = "0.12"
bevy_egui = "0.24"
bevy-inspector-egui = "0.22"
bevy_rapier2d = "0.23"
bevy_button_released_plugin = "0.3"
